// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`View Filter Resolver deleteViewFilter should throw an error when deleting non-existent view filter 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "View filter to delete not found",
  "name": "NotFoundError",
}
`;

exports[`View Filter Resolver destroyViewFilter should throw an error when destroying non-existent view filter 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "View filter to destroy not found",
  "name": "NotFoundError",
}
`;

exports[`View Filter Resolver updateViewFilter should throw an error when updating non-existent view filter 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "View filter to update not found",
  "name": "NotFoundError",
}
`;
